--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <title>Struttura Discord</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="container-body">
+        <header>
+            <div class="back-lightblue">
+                <div class="container">   
+                    <nav class="nav-header d-flex">
+                        <div class="logo">logo</div>
+                        <div class="link">link link link link link</div>
+                        <div class="login">login</div>
+                    </nav>
+                </div>
+            </div>
+            <div class="back-blue">
+                <div class=" div-header container"></div>
+            </div>
+        </header>
     
 </body>
 </html>
