--- a/index.html
+++ b/index.html
@@ -21,6 +21,37 @@
                 <div class=" div-header container"></div>
             </div>
         </header>
+        <main>
+            <div class="back-white">
+                <div class="container">
+                    <div class="div-main-start d-flex">
+                        <div class="side-40"></div>
+                        <div class="side-60"></div>
+                    </div>
+                 </div>
+            </div>
+            <div class="back-lightgray">
+                <div class="container">
+                    <div class="div-main-center d-flex">
+                        <div class="side-40"></div>
+                        <div class="side-60"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="back-white">
+                <div class="container">
+                    <div class="div-main-start d-flex">
+                        <div class="side-40"></div>
+                        <div class="side-60"></div>
+                    </div>
+                 </div>
+            </div>
+            <div class="back-lightgray">
+                <div class="container">
+                    <div class="div-main-end d-flex"></div>
+                 </div>
+            </div>
+        </main>
     
 </body>
 </html>
