added top footer

--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
                  </div>
             </div>
         </main>
+        <footer>
+            <div class="back-black">
+                <div class="container">
+                    <nav class="top-footer d-flex">
+                        <div class="double-side"></div>
+                        <div class="side"></div>
+                        <div class="side"></div>
+                        <div class="side"></div>
+                        <div class="side"></div>
+                    </nav>
+                </div>
+            </div>
+        </footer>
+
     
 </body>
 </html>
