--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
                         <div class="side"></div>
                     </nav>
                 </div>
+                <div class="border"></div>
+            </div>
+            <div class="back-black">
+                <div class="container">
+                    <div class="down-footer">
+                        <div class="side-down-footer">Logo</div>
+                        <div class="side-down-footer">Bottone</div>
+                    </div>
+                </div>
             </div>
         </footer>
 
